--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -98,7 +98,7 @@
         top: 15px;
         right: 15px;
         padding: 2px;
-        z-index: var(--z-toggle);
+        z-index: var(--z-toggle) !important;
     }
     
     .lang-btn {
@@ -112,7 +112,7 @@
         right: 100px;
         width: 40px;
         height: 40px;
-        z-index: var(--z-toggle);
+        z-index: var(--z-toggle) !important;
     }
     
     /* Navigation mobile styles */
